--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ OBJS=main.o nes.o mapper.o vmapper.o cpu.o ppu.o apu.o
 ${TARGET}:${OBJS}
 	${LD} -o ${TARGET} ${OBJS} ${LDFLAGS} ${LIBS}
 
-main.o:main.cpp cpu.h nes.h ppu.h mapper.h
+main.o:main.cpp cpu.h nes.h ppu.h apu.h mapper.h 
 	${CXX} ${CXXFLAGS} main.cpp
 nes.o: nes.cpp nes.h cpu.h ppu.h mapper.h vmapper.h
 	${CXX} ${CXXFLAGS} nes.cpp
