--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ LDFLAGS=
 LIBS=
 
 TARGET=nes
-OBJS=main.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o
+OBJS=main.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o pad.o vpad.o
 
 ${TARGET}:${OBJS}
 	${LD} -o ${TARGET} ${OBJS} ${LDFLAGS} ${LIBS}
@@ -22,10 +22,14 @@ cpu.o: cpu.cpp cpu.h
 	${CXX} ${CXXFLAGS} cpu.cpp
 ppu.o: ppu.cpp ppu.h
 	${CXX} ${CXXFLAGS} ppu.cpp
-vppu.o: vppu.cpp vppu.h
+vppu.o: vppu.cpp vppu.h ppu.h
 	${CXX} ${CXXFLAGS} vppu.cpp
 apu.o: apu.cpp apu.h
 	${CXX} ${CXXFLAGS} apu.cpp
+pad.o: pad.cpp pad.h
+	${CXX} ${CXXFLAGS} pad.cpp
+vpad.o: vpad.cpp vpad.h pad.h
+	${CXX} ${CXXFLAGS} vpad.cpp
 
 clean:
 	-rm -f ${TARGET} ${OBJS}
