--- a/src/Makefile
+++ b/src/Makefile
@@ -6,22 +6,24 @@ LIBS=-lglfw -lGLEW
 FWS=-framework OpenGL -framework CoreVideo -framework IOKit -framework Cocoa
 
 TARGET=nes
-OBJS=main.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o pad.o vpad.o events.o renderer.o glfw.o glfwrenderer.o
+OBJS=main.o config.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o pad.o vpad.o events.o renderer.o core.o glfw.o glfwrenderer.o
 
 ${TARGET}:${OBJS}
 	${LD} -o ${TARGET} ${OBJS} ${LDFLAGS} ${LIBS} ${FWS}
 
-main.o:main.cpp cpu.h nes.h ppu.h apu.h mapper.h 
+main.o:main.cpp config.h core.h cpu.h nes.h ppu.h apu.h mapper.h 
 	${CXX} ${CXXFLAGS} main.cpp
-nes.o: nes.cpp nes.h cpu.h ppu.h vppu.h mapper.h vmapper.h
+config.o:config.cpp config.h
+	${CXX} ${CXXFLAGS} config.cpp
+nes.o: nes.cpp nes.h config.h cpu.h ppu.h vppu.h mapper.h vmapper.h core.h
 	${CXX} ${CXXFLAGS} nes.cpp
 mapper.o: mapper.cpp mapper.h ppu.h cpu.h
 	${CXX} ${CXXFLAGS} mapper.cpp
 vmapper.o: vmapper.cpp vmapper.h mapper.h
 	${CXX} ${CXXFLAGS} vmapper.cpp
-cpu.o: cpu.cpp cpu.h
+cpu.o: cpu.cpp cpu.h config.h core.h
 	${CXX} ${CXXFLAGS} cpu.cpp
-ppu.o: ppu.cpp ppu.h events.h renderer.h
+ppu.o: ppu.cpp ppu.h events.h renderer.h core.h
 	${CXX} ${CXXFLAGS} ppu.cpp
 vppu.o: vppu.cpp vppu.h ppu.h
 	${CXX} ${CXXFLAGS} vppu.cpp
@@ -35,6 +37,8 @@ events.o: events.cpp events.h
 	${CXX} ${CXXFLAGS} events.cpp
 renderer.o: renderer.cpp renderer.h
 	${CXX} ${CXXFLAGS} renderer.cpp
+core.o: core.cpp core.h
+	${CXX} ${CXXFLAGS} core.cpp
 glfw.o: glfw.cpp glfw.h
 	${CXX} ${CXXFLAGS} glfw.cpp
 glfwrenderer.o: glfwrenderer.cpp glfwrenderer.h renderer.h glfw.h
