--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ LIBS=
 
 SRCDIR=../src/
 TARGET=nes
-OBJS=main.o nes.o nesfortest.o mapper.o vmapper.o cpu.o testcpu.o ppu.o vppu.o apu.o pad.o vpad.o events.o
+OBJS=main.o config.o nes.o core.o nesfortest.o mapper.o vmapper.o cpu.o testcpu.o ppu.o vppu.o apu.o pad.o vpad.o events.o
 
 ${TARGET}:${OBJS}
 	${LD} -o ${TARGET} ${OBJS} ${LDFLAGS} ${LIBS}
@@ -21,6 +21,10 @@ mapper.o: ${SRCDIR}mapper.cpp ${SRCDIR}mapper.h
 	${CXX} ${CXXFLAGS} ${SRCDIR}mapper.cpp
 vmapper.o: ${SRCDIR}vmapper.cpp ${SRCDIR}vmapper.h ${SRCDIR}mapper.h
 	${CXX} ${CXXFLAGS} ${SRCDIR}vmapper.cpp
+config.o: ${SRCDIR}config.cpp ${SRCDIR}config.h
+	${CXX} ${CXXFLAGS} ${SRCDIR}config.cpp
+core.o: ${SRCDIR}core.cpp ${SRCDIR}core.h
+	${CXX} ${CXXFLAGS} ${SRCDIR}core.cpp
 cpu.o: ${SRCDIR}cpu.cpp ${SRCDIR}cpu.h
 	${CXX} ${CXXFLAGS} ${SRCDIR}cpu.cpp
 testcpu.o: testcpu.cpp testcpu.h ${SRCDIR}cpu.h
