--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ LIBS=-lglfw -lGLEW
 FWS=-framework OpenGL -framework CoreVideo -framework IOKit -framework Cocoa -framework OpenAL
 
 TARGET=nes
-OBJS=main.o config.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o openalapu.o pad.o vpad.o events.o renderer.o core.o glfw.o glfwrenderer.o
+OBJS=main.o config.o frame.o nes.o mapper.o vmapper.o cpu.o ppu.o vppu.o apu.o openalapu.o pad.o vpad.o events.o renderer.o core.o glfw.o glfwrenderer.o
 
 ${TARGET}:${OBJS}
 	${LD} -o ${TARGET} ${OBJS} ${LDFLAGS} ${LIBS} ${FWS}
@@ -15,8 +15,10 @@ main.o:main.cpp config.h core.h cpu.h nes.h ppu.h apu.h mapper.h
 	${CXX} ${CXXFLAGS} main.cpp
 config.o:config.cpp config.h
 	${CXX} ${CXXFLAGS} config.cpp
-nes.o: nes.cpp nes.h config.h cpu.h ppu.h apu.h openalapu.h vppu.h mapper.h vmapper.h core.h 
+nes.o: nes.cpp nes.h config.h frame.h cpu.h ppu.h apu.h openalapu.h vppu.h mapper.h vmapper.h core.h 
 	${CXX} ${CXXFLAGS} nes.cpp
+frame.o: frame.cpp frame.h
+	${CXX} ${CXXFLAGS} frame.cpp
 mapper.o: mapper.cpp mapper.h ppu.h cpu.h
 	${CXX} ${CXXFLAGS} mapper.cpp
 vmapper.o: vmapper.cpp vmapper.h mapper.h
@@ -29,7 +31,7 @@ vppu.o: vppu.cpp vppu.h ppu.h
 	${CXX} ${CXXFLAGS} vppu.cpp
 apu.o: apu.cpp apu.h
 	${CXX} ${CXXFLAGS} apu.cpp
-openalapu.o: openalapu.cpp openalapu.h apu.h frameworker.h
+openalapu.o: openalapu.cpp openalapu.h apu.h vapu.h frameworker.h
 	${CXX} ${CXXFLAGS} openalapu.cpp
 pad.o: pad.cpp pad.h
 	${CXX} ${CXXFLAGS} pad.cpp
